...
      'form',
      'diyet',
      'zayıflama',
    ],

    // Market & Alışveriş
    ['Market', 'Alışveriş', 'Gıda']: [
      'market',
      'alışveriş',
      'migros',
      'bim',
      'a101',
      'şok',
...
      'kontrat',
      'emlak',
      'komisyon',
    ],

    // Sağlık & Medikal
    ['Sağlık', 'Medikal', 'Hastane', 'Eczane']: [
      'sağlık',
      'ilaç',
      'eczane',
      'doktor',
      'hastane',
      'klinik',
...
